<resources>
    <string name="app_name">Death Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Cerita Horror</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">LOGIN</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="cerita">Cerita</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="version_app">Versi 1.0.0 Beta</string>
    <string name="copyright">© 2019 - 2020 Deathnote Inc.</string>

    <string name="fandi">Muhammad Fandi K - 18.02.0257</string>
    <string name="eka">Eka Saputra - 18.02.0279</string>
    <string name="vernanda">Vernanda Dwi H - 18.02.0280</string>

</resources>
